--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .mail {
@@ -65,7 +69,15 @@ body {
     z-index: 6;
     transform-origin: top;
     transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
+    -webkit-transform: rotateX(0deg);
     transition: all 1s 1s ease;
+    -moz-transition: all 1s 1s ease;
+    -ms-transition: all 1s 1s ease;
+    -o-transition: all 1s 1s ease;
+    -webkit-transition: all 1s 1s ease;
 }
 
 .letter {
@@ -78,6 +90,10 @@ body {
     height: 180px;
     border-radius: 20px;
     transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
 }
 
 .letter h1 {
@@ -85,19 +101,35 @@ body {
     top: 50%;
     left: 50%;
     font-size: 80px;
-    transform: translate(-50%, -50%);
     color: #798992;
     font-weight: 900;
+    transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .mail:hover .cover:before {
     transform: rotateX(180deg);
+    -moz-transform: rotateX(180deg);
+    -ms-transform: rotateX(180deg);
+    -o-transform: rotateX(180deg);
+    -webkit-transform: rotateX(180deg);
     transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
 }
 
 .mail:hover .letter {
     top: -80px;
     transition: all 1s 1s ease;
+    -moz-transition: all 1s 1s ease;
+    -ms-transition: all 1s 1s ease;
+    -o-transition: all 1s 1s ease;
+    -webkit-transition: all 1s 1s ease;
 }
 
 .letter img {
