subindo lokura para o chato do safari

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background: #302929;
 }
 
-.wrapper {
+body>div {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,7 +18,7 @@ body {
     -webkit-transform: -webkit-transform(-50%, -50%);
 }
 
-.mail {
+body>div>div {
     width: 300px;
     height: 200px;
     background: #ff8789;
@@ -29,7 +29,7 @@ body {
     cursor: pointer;
 }
 
-.mail:before {
+body>div>div:before {
     content: "";
     position: absolute;
     top: 0;
@@ -43,7 +43,7 @@ body {
     z-index: 5;
 }
 
-.mail:after {
+body>div>div:after {
     content: "";
     position: absolute;
     top: 0;
@@ -57,7 +57,7 @@ body {
     z-index: 4;
 }
 
-.cover:before {
+aside:before {
     content: "";
     position: absolute;
     top: 0;
@@ -80,7 +80,7 @@ body {
     -webkit-transition: all 1s 1s ease;
 }
 
-.letter {
+article {
     position: absolute;
     z-index: 3;
     top: 0;
@@ -96,7 +96,7 @@ body {
     -webkit-transition: all 1s ease;
 }
 
-.letter h1 {
+article h1 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -107,10 +107,10 @@ body {
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
-    -webkit-transform: -webkit-translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
-.mail:hover .cover:before {
+body>div>div:hover aside:before {
     transform: rotateX(180deg);
     -moz-transform: rotateX(180deg);
     -ms-transform: rotateX(180deg);
@@ -123,7 +123,7 @@ body {
     -webkit-transition: all 1s ease;
 }
 
-.mail:hover .letter {
+body>div>div:hover article {
     top: -80px;
     transition: all 1s 1s ease;
     -moz-transition: all 1s 1s ease;
@@ -132,7 +132,7 @@ body {
     -webkit-transition: all 1s 1s ease;
 }
 
-.letter img {
+article img {
     width: 270px;
     height: 150px;
     border-radius: 20px;
