--- a/envelope.css
+++ b/envelope.css
@@ -9,7 +9,7 @@ body {
     width: 400px;
     background-color: #ff8789;
     position: relative;
-    top: 200px;
+    top: 20em;
     margin-left: auto;
     margin-right: auto;
     border-bottom-left-radius: 10px;
@@ -62,62 +62,13 @@ body {
     border-radius: 10px;
     box-sizing: border-box;
     padding: 10px;
-    text-align: center;
-    font-family: 'Kalam', cursive;
     z-index: 3;
-}
-
-.letter h1 {
-    font-size: 30px;
-    margin: 0px;
-}
-
-.letter p {
-    position: relative;
-    margin: 0px;
-    top: -15px;
-    text-align: left;
-    font-size: 12px;
-}
-
-.letter p textarea {
-    font-family: 'Kalam', cursive;
-    font-size: 12px;
-    position: relative;
-    top: 6px;
-    resize: none;
-    background: none;
-    border: none;
-    outline: none;
-}
-
-.letter p textarea:hover {
-    border: none;
-}
-
-.contact .buttons {
-    position: relative;
-    top: -18px;
-    font-size: 12px;
-    margin: 10px 0px 0px 0px;
-    padding: 2px;
-    border: 2px solid black;
-    width: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 4px;
-    transition: 200ms ease;
-    cursor: pointer;
-}
-
-.contact .buttons:hover {
-    background-color: black;
-    color: white;
 }
 
 .paper {
     position: relative;
-    width: 270px;
-    height: 150px;
+    width: 100%;
+    height: 70%;
     border-radius: 20px;
+    z-index: 4;
 }
