Alterando cor do fundo do cartao

--- a/envelope.css
+++ b/envelope.css
@@ -7,7 +7,7 @@ body {
 .envelope {
     height: 300px;
     width: 400px;
-    background-color: #ff8789;
+    background-color: #421124;
     position: relative;
     top: 10em;
     margin-left: auto;
